Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.8.1 ()
--------

Bug fixes:

- We now ensure that an Env instance exists when getting the crs or crs_wkt
  properties of a Collection (#673, #690). Otherwise, required GDAL and PROJ
  data files included in Fiona wheels can not be found.
- GDAL and PROJ data search has been refactored to improve testability (#678).
- In the project's Cython code, void* pointers have been replaced with proper
  GDAL types (#672).
- Pervasive warning level log messages about ENCODING creation options (#668)
  have been eliminated.

1.8.0 (2018-10-31)
------------------

This is the final 1.8.0 release. Thanks, everyone!

Bug fixes:

- We cpdef Session.stop so that it has a C version that can be called safely
  from __dealloc__, fixing a PyPy issue (#659, #553).

1.8rc1 (2018-10-26)
-------------------

There are no changes in 1.8rc1 other than more test standardization and the
introduction of a temporary test_collection_legacy.py module to support the
build of fully tested Python 2.7 macosx wheels on Travis-CI.

1.8b2 (2018-10-23)
------------------

Bug fixes:

- The ensure_env_with_credentials decorator will no longer clobber credentials
  of the outer environment. This fixes a bug reported to the Rasterio project
  and which also existed in Fiona.
- An unused import of the packaging module and the dependency have been 
  removed (#653).
- The Env class logged to the 'rasterio' hierarchy instead of 'fiona'. This
  mistake has been corrected (#646).
- The Mapping abstract base class is imported from collections.abc when
  possible (#647).

Refactoring:

- Standardization of the tests on pytest functions and fixtures continues and
  is nearing completion (#648, #649, #650, #651, #652).

1.8b1 (2018-10-15)
------------------

Deprecations:

- Collection slicing has been deprecated and will be prohibited in a future
  version.

Bug fixes:
